fix: fonts were too large

--- a/code/fingerprinting/exhibition/style.css
+++ b/code/fingerprinting/exhibition/style.css
@@ -89,12 +89,12 @@ body {
 
 h1 {
     font-family: 'Ortica', sans-serif;
-    font-size: 4em;
+    font-size: 3.5em;
     font-weight: bold;
 }
 h2{
     font-family: 'Ortica', sans-serif;
-    font-size: 3em;
+    font-size: 2em;
 }
 
 h3, h4 {
